--- a/index.html
+++ b/index.html
@@ -8,39 +8,37 @@
     <body>
         <div class="container">
             <div class="screen">
-
+                fdsfda
             </div>
 
             <div class="buttons">
                 <div class="numbers">
-                    <div class="col-1">
+                    <div id="row-1">
                         <span>7</span>
-                        <span>4</span>
-                        <span>1</span>
-                        <span>0</span>
-                    </div>
-                    <div class="col-2">
                         <span>8</span>
-                        <span>5</span>
-                        <span>2</span>
-                        <span>.</span>
-                    </div>
-                    <div class="col-3">
                         <span>9</span>
+                        <span>÷</span>
+                    </div>
+                    <div id="row-2">
+                         <span>4</span>
+                        <span>5</span>
                         <span>6</span>
+                        <span>×</span>
+                    </div>
+                    <div id="row-3">
+                        <span>1</span>
+                        <span>2</span>
                         <span>3</span>
                         <span>=</span>
                     </div>
-                </div>
-                <div class="operations">
-                    <div class="col-4">
-                        <span>/</span>
-                        <span>*</span>
-                        <span>-</span>
+                    <div id="row-4">
+                        <span>0</span>
+                        <span>.</span>
+                        <span>=</span>
                         <span>+</span>
                     </div>
                 </div>
-                
+    
             </div>
 
         </div>
