--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
         <meta charset="UTF-8">
         <title></title>
         <link rel="stylesheet" href="css/style.css">
-    </header>
+    </head>
     <body>
         <div class="container">
             <div class="screen">
-                fdsfda
             </div>
 
             <div class="buttons">
                 <div class="numbers">
                     <div id="row-1">
-                        <span>7</span>
-                        <span>8</span>
-                        <span>9</span>
-                        <span>÷</span>
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                        <button>C</button>
                     </div>
                     <div id="row-2">
-                         <span>4</span>
-                        <span>5</span>
-                        <span>6</span>
-                        <span>×</span>
+                         <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button>×</button>
                     </div>
                     <div id="row-3">
-                        <span>1</span>
-                        <span>2</span>
-                        <span>3</span>
-                        <span>=</span>
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button>÷</button>
                     </div>
                     <div id="row-4">
-                        <span>0</span>
-                        <span>.</span>
-                        <span>=</span>
-                        <span>+</span>
+                        <button>0</button>
+                        <button>=</button>
+                        <button>–</button>
+                        <button>+</button>
                     </div>
                 </div>
     
             </div>
 
         </div>
+        <script src="js/javascript.js"></script>
     </body>
 </html>
