--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
             </div>
 
         </div>
-        <script src="js/javascript.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
